# kodon-py

./: .gitignore  README.md  pyproject.toml
src/instance/: kodon-db.sqlite
src/kodon_py/: __init__.py  api.py  cli.py  database.py  ingestion.py  models.py  server.py  tei_parser.py
src/kodon_py/database/: schema.sql
src/kodon_py/migrations/: 0001_init.py  1769136224_init.py  1769136687_init.py
src/kodon_py/tei_parser/: database.py  tei_parser.py
src/kodon_py/templates/: base.html.jinja
src/kodon_py/templates/components/: LocationContainer.html.jinja  Navigation.html.jinja  ReadableTextContainer.html.jinja  ReadingEnvironment.html.jinja  Speaker.html.jinja  Tooltip.html.jinja
src/kodon_py/templates/components/styles/: comments.html.jinja
stanza_models/grc/tokenize/: perseus.pt
stanza_models/la/mwt/: perseus.pt
stanza_models/la/tokenize/: perseus.pt
tei_json/: tlg0057.tlg111.verbatim-grc1.json
test_tei/: tlg0057.tlg111.verbatim-grc1.xml
tests/: __init__.py  conftest.py  test_cli.py  test_ingestion.py  test_server.py
