[project]
name = "kodon-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Pletcher", email = "cpletcher2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "stanza>=1.11.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
