[project]
name = "kodon-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Pletcher", email = "cpletcher2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "flask>=3.1.2",
    "flask-alembic>=3.2.0",
    "flask-sqlalchemy>=3.1.1",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "numpy==2.4.1",
    "sqlalchemy>=2.0.45",
    "stanza>=1.11.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
